[gd_scene load_steps=7 format=2]

[ext_resource path="res://Tilesets/forest_brick2.tres" type="TileSet" id=1]
[ext_resource path="res://Assets/button .png" type="Texture" id=2]
[ext_resource path="res://Levels/Door.gd" type="Script" id=3]
[ext_resource path="res://Assets/button pressed .png" type="Texture" id=4]

[sub_resource type="RayShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TileMap:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -96 ) ]
}

[node name="Door" type="Node2D"]
position = Vector2( -800, 0 )
script = ExtResource( 3 )
pressed = ExtResource( 4 )
default = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 1, 3, 65536, 1, 65539, 131072, 1, 131075 )
__meta__ = {
"_edit_lock_": true
}

[node name="DoorButton" type="Area2D" parent="."]
position = Vector2( 164, 90 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="DoorButton"]
position = Vector2( 0, -10 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorButton"]
rotation = 3.14159
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 2 )
[connection signal="body_entered" from="DoorButton" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DoorButton" to="." method="_on_Area2D_body_exited"]
